--- a/index.css
+++ b/index.css
@@ -1,18 +1,41 @@
 img{
     position: relative;
     left: 45.5%;
+    align-self: center;
 }
 h1 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
-    left: 37.5%;
+    text-align: center;
 }
-button {
+#zolbangdae {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#timetable {
+    border: 1px solid #000000
+}
+#ui {
+    margin-left: auto;
+    margin-right: auto;
+}
+#zolbangdae td {
+    border: 1px solid #000000;
     width: 200px;
     height: 200px;
-    font-size: 20pt;
+    margin-left: auto;
+    margin-right: auto;
+
 }
-table {
-    position: relative;
-    left: 50%;
+#num1, #num2, #num3, #num4, #num5{
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    font-size: 30pt;
+    margin:0 auto;
+    display: block;
+}
+p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
